--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -16,9 +16,9 @@ body{
 }
 
 .playmovilimg {
-    height: 300px;
+    height: 23rem;
     position: relative;
-    margin: 15px 50px 0 130px;
+    margin: 15px 10rem 0 130px;
 }
 
 
@@ -61,7 +61,7 @@ body{
 }
 
 .titlestacks {
-    font-weight: 100;
+    font-weight: bold;
     letter-spacing: 2px;
     text-transform: uppercase;
     margin: 0px 0px 48px;
@@ -77,10 +77,11 @@ body{
     scroll-snap-align: center;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 5rem;
 }
 
 .Stacks{
-    font-weight: 700;
+    font-weight: lighter;
     margin: 0 0;
     border-bottom: 1px dashed black;
     padding-bottom: 1rem;
